--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_executable(client socket_client.c)
-add_executable(server socket_server.c)
+add_executable(socket_client socket_client.c)
+add_executable(socket_server socket_server.c)
+
+add_executable(fifo_read fifo_read.c)
+add_executable(fifo_write fifo_write.c)
