--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,8 @@ add_executable(socket_server socket_server.c)
 
 add_executable(fifo_read fifo_read.c)
 add_executable(fifo_write fifo_write.c)
+
+add_executable(pipe_test pipe_test.c)
+
+add_executable(sysv_write sysv_write.c)
+add_executable(sysv_read sysv_read.c)
