--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,5 @@ add_executable(sysv_read sysv_read.c)
 
 add_executable(mmap_read mmap_read.c)
 add_executable(mmap_write mmap_write.c)
+
+add_executable(poll_test poll_test.c)
